# mini-caffe

./: mini-caffe.cmake
cmake/: CMakeInstallDirs_full.cmake
example/: CMakeLists.txt
example/deeplandmark/: landmark.cpp  landmark.hpp  main.cpp
example/r-fcn/: main.cpp
example/wgan/: main.cpp
include/mini-caffe/: base.hpp  blob.hpp  mini-caffe.hpp  net.hpp  profiler.hpp
src/: blob.cpp  c_api.cpp  common.cpp  common.hpp  filler.hpp  layer.hpp  layer_factory.hpp  net.cpp  profiler.cpp
src/jni/: jni.c
src/layers/cudnn/: cudnn.hpp
src/util/: io.hpp
tests/: run_net.c  run_net.cpp
tools/: benchmark.cpp
